client and others fixed
